--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
-    "express": "~4.15.5"
+    "express": "~4.15.5",
+    "mongodb": "^3.0.0-rc0"
   }
 }
