--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.18.2",
+    "body-parser": "^1.18.2",
     "cookie-parser": "~1.4.3",
     "express": "~4.15.5",
     "mongodb": "^3.0.0-rc0"
